--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,47 @@
-.App {
-  text-align: center;
-}
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  height:80px;
+  flex:  0 4%;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.button{
+  margin-right: 20px;
+  margin-top:10px
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.containerDeck{
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  column-gap: 20px;
+  flex-wrap: wrap;
 }
-
-.App-link {
-  color: #61dafb;
+.ico-0{
+color:red
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.ico-1{
+  color:black
+}
+.ico-2{
+  color:green
+}
+.ico-3{
+  color:blue
+}
+.cards{
+  width:120px;
+  height:180px
+}
+.deck {
+  margin-top: 20px;
+}
+.container{
+  position:relative
+}
+h4{
+  position:absolute;
+  margin:5px;
+}
+button {
+  font-size: 16px;
+  padding: 10px;
+  margin-bottom: 10px;
 }
